; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dcahuff.c_ff_dca_vlc_enc_quant.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_dcahuff.c_ff_dca_vlc_enc_quant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bitalloc_offsets = common dso_local global i64* null, align 8
@bitalloc_sizes = common dso_local global i64* null, align 8
@bitalloc_bits = common dso_local global i32*** null, align 8
@bitalloc_codes = common dso_local global i32*** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_dca_vlc_enc_quant(i32* %0, i32* %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  store i64 0, i64* %11, align 8
  br label %13

13:                                               ; preds = %58, %5
  %14 = load i64, i64* %11, align 8
  %15 = load i64, i64* %8, align 8
  %16 = icmp ult i64 %14, %15
  br i1 %16, label %17, label %61

17:                                               ; preds = %13
  %18 = load i32*, i32** %7, align 8
  %19 = load i64, i64* %11, align 8
  %20 = getelementptr inbounds i32, i32* %18, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = sext i32 %21 to i64
  %23 = load i64*, i64** @bitalloc_offsets, align 8
  %24 = load i64, i64* %10, align 8
  %25 = getelementptr inbounds i64, i64* %23, i64 %24
  %26 = load i64, i64* %25, align 8
  %27 = sub i64 %22, %26
  store i64 %27, i64* %12, align 8
  %28 = load i64, i64* %12, align 8
  %29 = load i64*, i64** @bitalloc_sizes, align 8
  %30 = load i64, i64* %10, align 8
  %31 = getelementptr inbounds i64, i64* %29, i64 %30
  %32 = load i64, i64* %31, align 8
  %33 = icmp ult i64 %28, %32
  %34 = zext i1 %33 to i32
  %35 = call i32 @av_assert0(i32 %34)
  %36 = load i32*, i32** %6, align 8
  %37 = load i32***, i32**** @bitalloc_bits, align 8
  %38 = load i64, i64* %10, align 8
  %39 = getelementptr inbounds i32**, i32*** %37, i64 %38
  %40 = load i32**, i32*** %39, align 8
  %41 = load i64, i64* %9, align 8
  %42 = getelementptr inbounds i32*, i32** %40, i64 %41
  %43 = load i32*, i32** %42, align 8
  %44 = load i64, i64* %12, align 8
  %45 = getelementptr inbounds i32, i32* %43, i64 %44
  %46 = load i32, i32* %45, align 4
  %47 = load i32***, i32**** @bitalloc_codes, align 8
  %48 = load i64, i64* %10, align 8
  %49 = getelementptr inbounds i32**, i32*** %47, i64 %48
  %50 = load i32**, i32*** %49, align 8
  %51 = load i64, i64* %9, align 8
  %52 = getelementptr inbounds i32*, i32** %50, i64 %51
  %53 = load i32*, i32** %52, align 8
  %54 = load i64, i64* %12, align 8
  %55 = getelementptr inbounds i32, i32* %53, i64 %54
  %56 = load i32, i32* %55, align 4
  %57 = call i32 @put_bits(i32* %36, i32 %46, i32 %56)
  br label %58

58:                                               ; preds = %17
  %59 = load i64, i64* %11, align 8
  %60 = add i64 %59, 1
  store i64 %60, i64* %11, align 8
  br label %13

61:                                               ; preds = %13
  ret void
}

declare dso_local i32 @av_assert0(i32) #1

declare dso_local i32 @put_bits(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
